# lcp_splineart

./: README.md  pyproject.toml
.github/workflows/: cd.yml
docs/: conf.py  requirements.txt
src/lcp_splinart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
